# tetris-efi

./: .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  vcpkg.json
.claude/agents/: regen.md  release.md
.claude/skills/ci/: SKILL.md
.github/workflows/: clang-format.yml  cmake.yml  codeql.yml  tests.yml
src/: CMakeLists.txt  font.c  font.h  game.c  game.h  loop.c  loop.h  main.c  piece.c  piece.h  render.c  render.h
tests/: CMakeLists.txt  test_font.c  test_game.c  test_loop.c  test_main.c  test_piece.c  test_render.c
